# testing-demo

./: README.md  README.rst  pyproject.toml
.github/workflows/: test.yml
demo/: affine.py  point.py
demo/plop/: lop.py  lop_test.py  rlop_wrapper.py
demo/rlop/: Cargo.toml
demo/rlop/src/: lib.rs
demo/transforms/: affine.py  affine_test.py  point.py  point_test.py
tests/: test_affine.py  test_point.py
