[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Andrew Mark <andrewemark@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.10.0"
numpy = "^1.22.3"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = "^6.39.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
